# connect-four

./: .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.hypothesis/constants/: 0043959d58293d3b  03f61c027d5c2ae6  24d463462bc4be6c  2526841a2d621e14  2ba68881688df39e  57e2087db2f0dede  6be6f06d9a58d529  9a24771afe9669ab
src/connect_four/: __init__.py  __main__.py  engine.py  players.py
src/connect_four/bots/: __init__.py  first_available.py  mcts.py  minimax.py  perfect.py  random.py
src/connect_four/ui/: benchmark.py  terminal.py
src/connect_four_rs/: Cargo.toml
src/connect_four_rs/src/: lib.rs
tests/: test_bots.py  test_engine.py  test_hypothesis.py  test_players.py
