[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "connect-four"
version = "1.0.0"
requires-python = ">=3.13"

[project.scripts]
connect-four = "connect_four.__main__:main"

[tool.maturin]
python-source = "src"
python-packages = ["connect_four"]
manifest-path = "src/connect_four_rs/Cargo.toml"
module-name = "connect_four_rs"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[dependency-groups]
dev = ["pytest>=9.0.3", "pytest-cov>=5.0", "hypothesis>=6.0", "ruff>=0.9"]
